--- a/src/components/KanbanV2.module.css
+++ b/src/components/KanbanV2.module.css
@@ -1,7 +1,7 @@
 .kanban-board {
   margin: 0;
   overflow-x: auto;
-  background-color: red; /* This should now show */
+  background-color: rgb(250, 248, 248); /* This should now show */
 }
 
 /* Test style - should be visible */
